objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACH_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATM_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When a technician delivers the ATM to the site.</inlineHelpText>
        <label>ATM Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ATM</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Accounts (ATM)</relationshipLabel>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accel_Amusements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accel Amusements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accel_Employee_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accel Employee Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accel_Live_Date_Populated__c</fullName>
        <description>This is a helper field to determine the existing of Accel VGT Live Date (Some Native Salesforce Component Filtering features currently do not allow filtering on dates)</description>
        <formula>Accel_VGT_Live_Date__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates Accel_VGT_Live_Date__c has a value.</inlineHelpText>
        <label>Accel Live Date Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accel_Membership__c</fullName>
        <label>Accel Membership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accel_VGT_Live_Date__c</fullName>
        <label>Accel VGT Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Access_Time__c</fullName>
        <label>Access Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_CaseSafe_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account CaseSafe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_HPD__c</fullName>
        <formula>IF( HPD_TTM__c  != 0, HPD_TTM__c,
IF( Three_Month_Average_HPD__c  != 0, Three_Month_Average_HPD__c,  Estimated_HPD__c )
)</formula>
        <label>Account HPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Has_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to identify accounts with a virtual switch. 
This field should be locked down and only be given editing rights approved by the Call Center supervisors/managers. Access provided via perm set &quot;Account: Account Has Switch field access&quot;</description>
        <label>Account Has Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Id_Fx__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id Fx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager_Check__c</fullName>
        <formula>IF(   $User.Id   =  LEFT(Owner_s_Manager_ID__c, 15)  ,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Manager Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager_Forceupdate__c</fullName>
        <label>Account Owner Manager Forceupdate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Rank__c</fullName>
        <label>Account Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Record_URL__c</fullName>
        <label>Account Record URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account_Total_HPD__c</fullName>
        <formula>if(Most_Recent_HPD_VGT_Count__c&gt;0, (Most_Recent_HPD_VGT_Count__c* Account_HPD__c), (Committed_Terminals__c *Account_HPD__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Total HPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisition</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Acquisition: Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.Acquisition__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Acquisition)</relationshipLabel>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_DOJ_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active DOJ License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>Accounts (Active DOJ License)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_IBA_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active IBA License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>Accounts (Active IBA License)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_IGB_Gaming_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked IGB Gaming License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>Accounts (Active IGB Gaming License)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Kiosk_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Kiosk Agreement</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Accounts (Active Kiosk Agreement)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Local_Gaming_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Local Gaming License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>Accounts (Active Local Gaming License)</relationshipLabel>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Local_Liquor_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Local Liquor License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Standalone_ATM_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Standalone ATM Agreement</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Accounts (Active Standalone ATM Agreement)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_State_Liquor_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active State Liquor License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>Accounts (Active State Liquor License)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Technology_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Technology Release</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Accounts (Active Technology Release)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_VGT_Purchased__c</fullName>
        <label>Actual VGT Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Add_Swap_Reconfigure_Instructions__c</fullName>
        <formula>&quot;Please click save to create your Add/Swap/Reconfigure project. Upon saving, please check your email for the new Project link, or scroll through the Related List on the right-hand side of the Account.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add/Swap/Reconfigure Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_VGT_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add VGT Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addendum_Exists__c</fullName>
        <label>Addendum Exists</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>True</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Mail_Merge_Recipients__c</fullName>
        <description>Additional Revenue Statement Recipients</description>
        <inlineHelpText>Please use a comma    (   ,  )   after each email address
*abc@accel.com, bcz@accel.com</inlineHelpText>
        <label>Additional Revenue Statement Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Gaming_History__c</fullName>
        <label>Address Gaming History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gaming_Experience</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Auto_Renew_Date__c</fullName>
        <label>Agreement Auto Renew Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Auto_Renew_Length__c</fullName>
        <label>Agreement Auto Renew Length</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Auto_Renew_Window__c</fullName>
        <label>Agreement Auto Renew Window</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Based_On__c</fullName>
        <label>Agreement Based On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement Signed Date</fullName>
                </value>
                <value>
                    <fullName>Addendum Date</fullName>
                </value>
                <value>
                    <fullName>Location Live Date</fullName>
                </value>
                <value>
                    <fullName>From Current Term of Agreement</fullName>
                </value>
                <value>
                    <fullName>Collective Live Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Current_Signed_Date__c</fullName>
        <label>Agreement Current Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Expiration_Date__c</fullName>
        <label>Agreement Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Original_Signed_Date__c</fullName>
        <label>Agreement Original Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Signed__c</fullName>
        <label>Agreement Signed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>True</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Voided_Date__c</fullName>
        <label>Account Discontinued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Voided_Reason__c</fullName>
        <label>Account Discontinued Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor Performance</fullName>
                    <label>Accel Rejected - Poor Performance</label>
                </value>
                <value>
                    <fullName>Poor Performance - Terminated</fullName>
                    <label>Accel Rejected - Poor Performance: Terminated</label>
                </value>
                <value>
                    <fullName>Accel Rejected - Poor Performance: TUA Expired</fullName>
                </value>
                <value>
                    <fullName>Accel rejected the location</fullName>
                </value>
                <value>
                    <fullName>Accel Rejected the Location - Terminated</fullName>
                </value>
                <value>
                    <fullName>Accel Rejected the Location - TUA Expired</fullName>
                </value>
                <value>
                    <fullName>Accel T.U.A. lapsed without renewal</fullName>
                </value>
                <value>
                    <fullName>Asset Sale -Lost to another TO</fullName>
                </value>
                <value>
                    <fullName>Corporate does not allow gaming</fullName>
                </value>
                <value>
                    <fullName>Duplicate Account</fullName>
                </value>
                <value>
                    <fullName>IGB Denied Gaming License</fullName>
                </value>
                <value>
                    <fullName>IGB Denied Gaming License Renewal</fullName>
                </value>
                <value>
                    <fullName>IGB Revoked Gaming License</fullName>
                </value>
                <value>
                    <fullName>IGB Revoked Gaming License- TUA Expired</fullName>
                </value>
                <value>
                    <fullName>IGB Rule 320 Petition</fullName>
                </value>
                <value>
                    <fullName>Location Denied Liquor License</fullName>
                </value>
                <value>
                    <fullName>Location Did Not Renew Gaming License</fullName>
                </value>
                <value>
                    <fullName>Location Did Not Renew Gaming License - TUA Expired</fullName>
                </value>
                <value>
                    <fullName>Location ineligible due to school/church/OTB distance</fullName>
                    <label>Location ineligible due to school/church/casino/OTB distance</label>
                </value>
                <value>
                    <fullName>Location ineligible due to school/church/casino/OTB distance - TUA Expired</fullName>
                </value>
                <value>
                    <fullName>Location is in an opt-out area</fullName>
                </value>
                <value>
                    <fullName>Location is out of business</fullName>
                </value>
                <value>
                    <fullName>Location lost liquor license</fullName>
                </value>
                <value>
                    <fullName>Location Lost Liquor License - TUA Expired</fullName>
                </value>
                <value>
                    <fullName>Location no longer interested in gaming</fullName>
                </value>
                <value>
                    <fullName>Location no longer interested in gaming – TUA Expired</fullName>
                </value>
                <value>
                    <fullName>Location no longer interested in gaming - TUA Terminated</fullName>
                </value>
                <value>
                    <fullName>Location Re-applied for New Gaming License</fullName>
                </value>
                <value>
                    <fullName>Location Re-applied for New Gaming License – Expired</fullName>
                </value>
                <value>
                    <fullName>Location Signed Extension w/TO - Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alarm_Keypad_Location__c</fullName>
        <label>Alarm Keypad Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alarm_Monitored__c</fullName>
        <label>Alarm Monitored</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alarm_Yes_No__c</fullName>
        <label>Alarm Yes/No</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amusement_ID__c</fullName>
        <label>Amusement ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amusement_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amusement Operator</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Amusement_Operator__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Amusement Operator)</relationshipLabel>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amusement_Region__c</fullName>
        <label>Amusement Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Amusement_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amusement_Sales_Status__c</fullName>
        <label>Amusement Sales Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Solicit</fullName>
                </value>
                <value>
                    <fullName>Not Sales Qualified</fullName>
                </value>
                <value>
                    <fullName>Agreement Signed</fullName>
                </value>
                <value>
                    <fullName>Live with Accel</fullName>
                </value>
                <value>
                    <fullName>Accel Amusements Discontinued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amusements_Live_Date__c</fullName>
        <inlineHelpText>This is the date of when the location went live with Amusements.</inlineHelpText>
        <label>Amusements Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Co_Op_Budget_Formula__c</fullName>
        <formula>IF(($User.Id = OwnerId), Annual_Co_Op_Budget__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Co-Op Budget (Formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Co_Op_Budget__c</fullName>
        <label>Annual Co-Op Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Cost__c</fullName>
        <label>Annual Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Fee_Paid__c</fullName>
        <label>Application Fee Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Notes__c</fullName>
        <label>Application Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Password__c</fullName>
        <label>Application Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Processed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Processed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Submitted_Date__c</fullName>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Submitted_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Submitted (Project)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Web_ID__c</fullName>
        <label>Application Web ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Withdrawn_Date__c</fullName>
        <label>Application Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>LicenseApplication__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_PM_Tech__c</fullName>
        <label>Assigned PM Tech</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aaron Holleman</fullName>
                </value>
                <value>
                    <fullName>Aaron Jenkins</fullName>
                </value>
                <value>
                    <fullName>Aidan Kean</fullName>
                </value>
                <value>
                    <fullName>AVG</fullName>
                </value>
                <value>
                    <fullName>Brett Moss</fullName>
                </value>
                <value>
                    <fullName>Briana Hamilton</fullName>
                </value>
                <value>
                    <fullName>Brianna Burkett</fullName>
                </value>
                <value>
                    <fullName>Brian Siekierka</fullName>
                </value>
                <value>
                    <fullName>Cedric Ngwa</fullName>
                </value>
                <value>
                    <fullName>Cole Wilton</fullName>
                </value>
                <value>
                    <fullName>Cory Hanselman</fullName>
                </value>
                <value>
                    <fullName>David Olsson</fullName>
                </value>
                <value>
                    <fullName>Dennis Milligan</fullName>
                </value>
                <value>
                    <fullName>Dylan Nelson</fullName>
                </value>
                <value>
                    <fullName>Gnyle Frank</fullName>
                </value>
                <value>
                    <fullName>James Dennison</fullName>
                </value>
                <value>
                    <fullName>James Evans</fullName>
                </value>
                <value>
                    <fullName>Janice Hawbaker</fullName>
                </value>
                <value>
                    <fullName>Jason Ater</fullName>
                </value>
                <value>
                    <fullName>Jason Koperski</fullName>
                </value>
                <value>
                    <fullName>Jeffrey Johnson</fullName>
                </value>
                <value>
                    <fullName>Jeremy Willis</fullName>
                </value>
                <value>
                    <fullName>Jonathan Garner</fullName>
                </value>
                <value>
                    <fullName>Jordan Wadsworth</fullName>
                </value>
                <value>
                    <fullName>Kenneth Stewart</fullName>
                </value>
                <value>
                    <fullName>Kyle Graska</fullName>
                </value>
                <value>
                    <fullName>Kyle Rorie</fullName>
                </value>
                <value>
                    <fullName>Larry Bailey</fullName>
                </value>
                <value>
                    <fullName>Lew Odum</fullName>
                </value>
                <value>
                    <fullName>Lucas Biggers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Association_Scope__c</fullName>
        <label>Association Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendant_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendant Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Revenue__c</fullName>
        <formula>AnnualRevenue / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bar?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Borderline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Borderline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branding__c</fullName>
        <inlineHelpText>The brand of Account. ie. Accel Entertainment or Tom&apos;s Amusements.</inlineHelpText>
        <label>Branding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Branding</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Indicator__c</fullName>
        <formula>IF(AND( Accel_VGT_Live_Date__c &lt;= (TODAY()-180),
(Projected_Marketing_Spend__c / Last_Year_s_Revenue__c)&gt;1.01),&quot;Overspent&quot;,
IF(AND(Accel_VGT_Live_Date__c &lt;= (TODAY()-180),(Projected_Marketing_Spend__c / Last_Year_s_Revenue__c)&gt;=0.61,(Projected_Marketing_Spend__c / Last_Year_s_Revenue__c)&lt;=1.01),&quot;At/Near Max Budget&quot;,
IF(AND( Accel_VGT_Live_Date__c &lt;= (TODAY()-180),
(Projected_Marketing_Spend__c / Last_Year_s_Revenue__c)&lt;0.61),
&quot;In Budget&quot;,&quot;No Information&quot;)))

/*IF(AND( Accel_VGT_Live_Date__c &lt;= (TODAY()-180),
(Projected_Marketing_Spend__c / Last_Year_s_Revenue__c)&gt;= 0.05),&quot;Overspent&quot;,
IF(AND(Accel_VGT_Live_Date__c &lt;= (TODAY()-180),(Projected_Marketing_Spend__c / Last_Year_s_Revenue__c)&gt;0.03,(Projected_Marketing_Spend__c / Last_Year_s_Revenue__c)&lt;0.05),&quot;At/Near Max Budget&quot;,
IF(AND( Accel_VGT_Live_Date__c &lt;= (TODAY()-180),
(Projected_Marketing_Spend__c / Last_Year_s_Revenue__c)&lt;=0.03),
&quot;In Budget&quot;,&quot;No Information&quot;)))*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Budget Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Close__c</fullName>
        <label>Business Hours: Close</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Open__c</fullName>
        <label>Business Hours: Open</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <label>Business Hours</label>
        <summarizedField>Business_Hours__c.Total_Business_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Business_Hours__c.Type__c</field>
            <operation>equals</operation>
            <value>Hours of Operation</value>
        </summaryFilterItems>
        <summaryForeignKey>Business_Hours__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CPU_Lock_Region__c</fullName>
        <label>CPU Lock Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Champaign/Watseka</fullName>
                </value>
                <value>
                    <fullName>Chicagoland</fullName>
                </value>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>Grand River Jackpot</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>Springfield</fullName>
                </value>
                <value>
                    <fullName>Tinley Park</fullName>
                </value>
                <value>
                    <fullName>IGB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CT_Dummy_Field__c</fullName>
        <label>CT Dummy Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculate_EAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate EAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Re_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Re-Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Can_Status__c</fullName>
        <formula>if(Can_Re_Installed__c = TRUE,&quot;Cash Can Complete&quot;,&quot;Cash Can Incomplete&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Can Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Only_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Only Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clone_Mail_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone Mail Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coin_Hoppers_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coin Hoppers Disabled</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>